Prepend, Append and Replace working, although of course, replace test broke with last change

--- a/test/templates/post/edit.html
+++ b/test/templates/post/edit.html
@@ -19,7 +19,7 @@
 
     <div id="content">
 
-<h1 id="action_title">The word "Editing" or "Creating" should be introduced before this</h1>
+<h1 id="action_title">ACTION TITLE</h1>
 
   <div class="errors" id="form_errors">
   Any errors with submitting the post will appear here, if there are no errors
